getting things to work

--- a/8-nights-classic-tour-of-israel - , Tour Package Itinerary.html
+++ b/8-nights-classic-tour-of-israel - , Tour Package Itinerary.html
@@ -4446,7 +4446,7 @@ var google_remarketing_only = true;
 	<div id="wrap">
 		<div id="btn-container">
 			<small>Starting USD 4,344*</small>
-			<button data-vl-key="6347" id="vl-btn">Book now &rarr;</button>
+			<button data-vl-trip-key="6347" id="vl-btn">Book now &rarr;</button>
 		</div>
 		<h3>8 Nights Classic Tour of Israel</h3>
 	</div>
